# meta-dds

./: .gitignore  Readme.md  library.json5  package.json5  pyproject.toml  setup.cfg
.github/workflows/: mark-untriaged.yml  todo-on-assignment.yml
meta_dds/: __init__.py  cli.py  cmake.py  cmake_forge_sdist.py  cmake_sdist.py  dds_exe.py  error.py  errors.py  exes.py  logutils.py  main.py  package.py  paths.py  pkg_create.py  repoman.py  sdist.py  setup.py  tempfiles.py  toolchain.py  util.py
src/: meta-dds.main.cpp
src/meta-dds/cli/: options.cpp  options.hpp
src/meta-dds/sdist/: package.cpp  package.hpp
tools/: gcc-10-audit.json5
