[metadata]
name = meta-dds-Quincunx271
version = 0.1.0
license = MPL-2.0
author = Justin Bassett
author_email = jbassett271@gmail.com
description = Extending the DDS build system with reified source trees
url = https://github.com/Quincunx271/meta-dds

[options]
package_dir =
    = meta_dds
packages = find:
python_requires = >=3.8

[options.packages.find]
where = meta_dds

[options.entry_points]
console_scripts =
    meta-dds = meta_dds.main:main
